# alg

2022/beautylish/: __main__.py  pyproject.toml
argyle/: .gitignore
back-of-the-envelope/: constant.py
bairesdev/: brackets_matching.py
code-challenges/1nfluencers/: .env  .pdm.toml  config.py  pyproject.toml  spider.py  twitter.py
code-challenges/42technologies/: SOLUTION.md  node.py
code-challenges/numa/: .gitignore  README.md
code-challenges/podium/: main.py
freshbooks/: demo.py  t1.py  t2.py  t3
freshbooks/1/: demo.py  t1.py  t2.py  t3.py
hackerrank/: 1.py
leetcode/: apply_discount_every_n_orders.py
misc/: iter_expression.py
quora/: t3.py
quora/fake-test/: alternatingSort.py  concatenationSum.py  mergeStrings.py  mutateTheArray.py
remotesome_/: websocket_server.py
